...
          px={4}
          pt={4}
          pb="calc(1rem + env(safe-area-inset-bottom, 0px))"
        >
          <UI.HStack mb={4}>
            <UI.Heading size="md" mr="auto">
              Your rooms
            </UI.Heading>
            <NewGroupIconButton />
          </UI.HStack>
          <GroupList />
        </UI.Box>
      </UI.Box>
...
