...
    );
  }

  return (
    <UI.VStack {...authFormPanelProps} onSubmit={handlePhoneSubmit}>
      <UI.FormControl>
        <UI.FormLabel>All you need is a phone number:</UI.FormLabel>
        <UI.MaskedInput
          type="tel"
          placeholder="(555) 555-5555"
          maskGenerator={phoneMask}
          value={phoneInput}
          onChange={(value) =>
...
