...
        <UI.ModalFooter
          justifyContent="center"
          pb="calc(1rem + env(safe-area-inset-bottom, 0px))"
        >
          <UI.ButtonGroup isDisabled={running}>
            <UI.Button variant="ghost" onClick={modal.onClose}>
              {options?.cancelLabel || 'Cancel'}
            </UI.Button>
            <UI.Button
              colorScheme={options?.isDestructive ? 'red' : 'action'}
              onClick={onConfirm}
              isLoading={running}
            >
...
