...
                    {title}
                  </Chakra.Text>
                ) : null}
              </Chakra.Box>
              {showClose ? (
                <IconButton
                  aria-label="Close"
                  icon={faXmark}
                  size="sm"
                  variant="ghost"
                  onClick={close}
                  _focus={{ boxShadow: 'none' }}
                  _focusVisible={{ boxShadow: 'outline' }}
...
